--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "test": "jest"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "test": "jest --watch"
   },
   "author": "pawan bisht",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "validator": "^13.0.0"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "jest": "^26.0.1",
     "nodemon": "^2.0.2"
   }
